Add graph background & lineRef to polyline

--- a/web/index.html
+++ b/web/index.html
@@ -138,12 +138,12 @@
             <table class="table table-condensed" id="divExtra">
                 <tbody>
                 <tr>
-                    <td style="font-weight: bold; width:30%;">Drift (=q-r)</td>
-                    <td id="Drift" style="text-align: right; width: 20%;">
+                    <td style="font-weight: bold; width:25%;">Drift (q-r)</td>
+                    <td id="Drift" style="text-align: right; width: 25%;">
                         <span>0</span>%
                     </td>
-                    <td style="font-weight: bold; width: 30%;">Fwd</td>
-                    <td id="Forward" style="text-align: right; width: 20%;">
+                    <td style="font-weight: bold; width: 25%;">Fwd</td>
+                    <td id="Forward" style="text-align: right; width: 25%;">
                         <span>100</span> $
                     </td>
                 </tr>
