--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-xs-5">
             <form role="form" id="divParameters">
                 <div class="form-group">
                     <label id="Stock">Stock Price (S) = <span>100</span> $</label>
@@ -151,7 +151,7 @@
             </table>
 
         </div>
-        <div class="col-sm-7">
+        <div class="col-xs-7">
             <div id="divGraphs">
                 <div id="allGraphs">
                 </div>
